name:                yesodbook-ru-examples
version:             1.2.6.1
synopsis:            Examples for Russian translation of the Yesod book (http://www.yesodweb.com/book-1.1/)
homepage:            https://bitbucket.org/darkus/Yesod
author:              
maintainer:          
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable 02-type-families
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             02/type-families.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring

executable 03-hello-world
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             03/hello-world.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 03-routes
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             03/routes.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 04-i18n
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/i18n.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , text
                     , yesod

executable 04-quasiquoter
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/quasiquoter.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , text

executable 04-query-string
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/query-string.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , http-types
                     , text

executable 04-shakespeare-text
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/shakespeare-text.hs
  build-depends:       base >=4.6 && <4.7
                     , shakespeare
                     , text

executable 04-url-interpolation
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/url-interpolation.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , text

executable 04-url-interpolation-query
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/url-interpolation-query.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , blaze-html
                     , hamlet
                     , http-types
                     , shakespeare
                     , text

executable 04-mixin
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/mixin.hs
  build-depends:       base >=4.6 && <4.7
                     , shakespeare
                     , text


executable 04-var-interpolation
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             04/var-interpolation.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare

executable 05-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             05/synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 05-example
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             05/example.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 05-style
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             05/style.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 07-args
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             07/args.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 07-logging
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             07/logging.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 06-slashes
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             06/slashes.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , http-types
                     , text
                     , yesod

executable 06-getmessage
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             06/getmessage.hs
  build-depends:       base >=4.6 && <4.7
                     , time
                     , yesod

executable 06-errorpage
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             06/errorpage.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 08-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             08/synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , time
                     , text
                     , yesod-form
                     , yesod

executable 08-monadic-forms
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             08/monadic-forms.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 08-input-forms
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             08/input-forms.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 08-nonuser-values
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             08/nonuser-values.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , time
                     , yesod

executable 09-session-example
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             09/session-example.hs
  build-depends:       base >=4.6 && <4.7
                     , clientsession
                     , yesod

executable 09-messages
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             09/messages.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 09-ultimate-destination
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             09/ultimate-destination.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 10-attribute-default
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/attribute-default.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

executable 10-attributes
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/attributes.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers

executable 10-attribute-whitespace
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/attribute-whitespace.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

-- executable 10-custom-fields
--   default-language:    Haskell2010
--   hs-source-dirs:      hs
--   main-is:             10/custom-fields.hs
--   build-depends:       base >=4.6 && <4.7
--                      , persistent
--                      , persistent-sqlite
--                      , persistent-template
--                      , time

executable 10-many-to-many
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/many-to-many.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

-- executable 10-migration
--   default-language:    Haskell2010
--   hs-source-dirs:      hs
--   main-is:             10/migration.hs
--   build-depends:       base >=4.6 && <4.7
--                      , persistent
--                      , persistent-sqlite
--                      , persistent-template
--                      , time
--                      , transformers

executable 10-mkmigrate
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/mkmigrate.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

-- executable 10-raw-sql
--   default-language:    Haskell2010
--   hs-source-dirs:      hs
--   main-is:             10/raw-sql.hs
--   build-depends:       base >=4.6 && <4.7
--                      , conduit
--                      , persistent
--                      , persistent-sqlite
--                      , persistent-template
--                      , text
--                      , time
--                      , transformers

executable 10-relations
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/relations.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers

executable 10-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers

executable 10-uniqueness
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/uniqueness.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , time
                     , transformers

executable 10-yesod
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             10/yesod.hs
  build-depends:       base >=4.6 && <4.7
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , time
                     , yesod

executable 12-selectRep
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             12/selectRep.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 12-personJson
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             12/personJson.hs
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , bytestring
                     , text

executable 12-returnJson
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             12/returnJson.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 12-provideJson
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             12/provideJson.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 12-haskell-show
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             12/haskell-show.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 12-haskell-show2
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             12/haskell-show2.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 12-haskell-show3
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             12/haskell-show3.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 13-navbar
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             13/navbar.hs
  build-depends:       base >=4.6 && <4.7
                     , monad-logger
                     , persistent-sqlite
                     , text
                     , time
                     , yesod

executable 13-request-information
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             13/request-information.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable 14-authentication
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             14/authentication.hs
  build-depends:       base >=4.6 && <4.7
                     , data-default
                     , http-conduit
                     , text
                     , yesod
                     , yesod-auth

executable 14-email-authentication
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             14/email-authentication.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , mime-mail
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , shakespeare
                     , text
                     , yesod
                     , yesod-auth

executable 14-authorization
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             14/authorization.hs
  build-depends:       base >=4.6 && <4.7
                     , data-default
                     , http-conduit
                     , text
                     , yesod
                     , yesod-auth

executable 16-i18n
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             16/i18n-synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 17-hellosub
  default-language:    Haskell2010
  hs-source-dirs:      hs/17
  main-is:             Main.hs
  other-modules:       HelloSub, HelloSub.Data
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable 17c-source
  default-language:    Haskell2010
  hs-source-dirs:      hs/17c
  main-is:             source.hs
  build-depends:       base >=4.6 && <4.7
                     , markdown
                     , text
                     , yesod

executable 18-blog
  default-language:    Haskell2010
  hs-source-dirs:      hs/18
  main-is:             blog.lhs
  build-depends:       base >=4.6 && <4.7
                     , monad-logger
                     , time
                     , persistent-sqlite
                     , yesod
                     , http-conduit
                     , http-client
                     , text
                     , yesod-auth
                     , yesod-form

-- executable 19-wiki
--   default-language:    Haskell2010
--   hs-source-dirs:      hs/19
--   main-is:             Wiki.lhs
--   other-modules:       Chat, Chat.Data
--   build-depends:       base >=4.6 && <4.7
--                      , aeson
--                      , blaze-builder
--                      , containers
--                      , markdown
--                      , template-haskell
--                      , text
--                      , wai-extra
--                      , warp
--                      , yesod
--                      , yesod-auth

executable 20-client
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             20/client.hs
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , attoparsec-conduit
                     , conduit
                     , conduit-extra
                     , http-conduit
                     , transformers

-- executable 20-server
--   default-language:    Haskell2010
--   hs-source-dirs:      hs
--   main-is:             20/server.hs
--   build-depends:       base >=4.6 && <4.7
--                      , aeson
--                      , attoparsec-conduit
--                      , bytestring
--                      , conduit
--                      , conduit-extra
--                      , http-types
--                      , lifted-base
--                      , transformers
--                      , wai
--                      , warp

executable 21-sphinx
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             21/source.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-markup
                     , blaze-html
                     , bytestring
                     , conduit
                     , http-types
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , pool-conduit
                     , sphinx
                     , text
                     , wai
                     , xml-conduit
                     , xml-types
                     , yesod

executable 24-hello-world
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             24/hello-world.hs
  build-depends:       base >=4.6 && <4.7
                     , http-types
                     , wai
                     , warp

executable 24-hello-world-gzip
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             24/hello-world-gzip.hs
  build-depends:       base >=4.6 && <4.7
                     , http-types
                     , wai
                     , wai-extra
                     , warp

executable 26-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             26/synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , conduit
                     , conduit-extra
                     , http-conduit
                     , resourcet
                     , transformers

executable 26-response-body
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             26/response-body.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , http-conduit
                     , transformers

executable 26-response-head
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             26/response-head.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , http-conduit
                     , transformers

executable 27-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , xml-conduit
                     , xml-hamlet

executable 27-cursor
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/cursor.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , xml-conduit

executable 27-cursor-operator
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/cursor-operator.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , xml-conduit

executable 27-cursor-h1
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/cursor-h1.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , xml-conduit

executable 27-xml
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , xml-conduit

executable 27-xml-hamlet
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml-hamlet.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , xml-conduit
                     , xml-hamlet

executable 27-xml-hamlet-vars
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml-hamlet-vars.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , text
                     , xml-conduit
                     , xml-hamlet

executable 27-xml2html
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml2html.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , containers
                     , xml2html
                     , xml-conduit
                     , xml-hamlet
